<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VoiceFragment"
    android:background="@color/background">

    <!--creating a simple image view for mic-->

    <TextView
        android:id="@+id/txt_prediction_title"
        android:layout_width="399dp"
        android:layout_height="46dp"
        android:gravity="center_vertical"
        android:text="@string/title_prediction"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txt_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/idIVMic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/mic_btn_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="380dp"
        android:layout_height="368dp"
        android:layout_marginBottom="92dp"
        android:background="@color/itemBackground"
        android:gravity="center"
        android:text="@string/txt_speech_default"
        android:textColor="@color/textColorSecondary"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_prediction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_prediction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="@color/itemBackground"
        android:text="@string/txt_prediction_default"
        android:textColor="@color/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@+id/idIVMic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>